--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,6 @@
 {
   "projects": {
-    "default": "mock-interview-major",
-    "AI": "mock-interview-major"
+    "b": "ai-mock-interview-2f5a4"
   },
   "targets": {},
   "etags": {}
