--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "b": "ai-mock-interview-2f5a4"
+    "default": "ai-mock-interview-2f5a4"
   },
   "targets": {},
   "etags": {}
